# llmTrends

./: README.md  client_redis.py  convert_image.py  discount_calculator_tool.py  image_descriptions.csv  multiModalqueryingWithChroma.py  pyproject.toml  runnable_chain.py  using_tools.py  vector_stores.py
images/text/: 10_red_chilli.txt  11_red_grapes.txt  12_red_raddish.txt  13_pear2.txt  14_pear.txt  15_orange.txt  16_orangeslice.txt  17_kiwihalf.txt  18_kiwiandkiwislices.txt  19_orangeandorangeslice.txt  1_apple.txt  20_eggplant.txt  21_eggplant.txt  22_dice.txt  23_carrot.txt  24_feather_red.txt  25_featherblue.txt  26_artificial_intelligence_brain.txt  27_duck.txt  28_octopusgreen.txt  29_octopusblue.txt  2_banana.txt  30_elephant.txt  3_yellow_bell_pepper.txt  4_vegetable_basket.txt  5_tomato.txt  6_potatoe.txt  7_pumpkin.txt  8_purple_grapes.txt  9_red_bell_pepper.txt
