[project]
name = "llmtrends"
version = "0.1.0"
description = ""
authors = [
    {name = "Navkant Tyagi",email = "navkant.tyagi9@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "chromadb (>=1.5.0,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "open-clip-torch (>=3.2.0,<4.0.0)",
    "ipython (>=9.10.0,<10.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
